# catchlog

./: .gitignore  =4.47.0  BACKEND_INTEGRATION_CHECKLIST.md  CLAUDE.md  TRAINING_README.md  catchlog_finetune.ipynb  train_full.py  train_short.py
.github/workflows/: deploy-landing.yml
backend/: .env.example  .gitignore  agent.py  compliance_agent.py  database.py  email_service.py  inference.py  main.py  models.py  pyproject.toml
backend/demo_images/: demo_bboxes.json
backend/tests/: test_api.py  test_scenarios.py
docs/: 2026-02-28-inference-integration-design.md  data-augmentation-guide.md  data-exploration-findings.md  fine-tuning-review.md  full-stack-alignment-review.md  poc_species_config.json
docs/plans/: 2026-02-28-backend-ui-design.md  2026-02-28-backend-ui-implementation.md  2026-02-28-cloud-compliance-design.md  2026-02-28-cloud-compliance-implementation.md  2026-02-28-critical-fixes-design.md  2026-02-28-demo-dataset-design.md  2026-02-28-demo-dataset-implementation.md  2026-02-28-test-scenarios-design.md  2026-02-28-test-scenarios-implementation.md  master-spec.md
frontend/app/: layout.tsx  page.tsx
frontend/components/: AlertFeed.tsx  CatchCounter.tsx  ComplianceReportView.tsx  ComplianceSummary.tsx  ImageUpload.tsx  ReleaseButton.tsx  SyncButton.tsx  VideoFeed.tsx
frontend/lib/: api.ts  types.ts
landing-page/: .gitignore  index.html  package-lock.json  package.json
scripts/: analyze_dataset.py  extract_demo_images.py  pyproject.toml  regulatory_analysis.py  species_mapping.json  view_protected_species.py  visualize_dataset.py
(+7 files in other folders)
